--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,6 +1,7 @@
 {
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
+  "AbacusIntenseCountingDriverVersion": "NA",
   "AbacusIntenseCountingParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
   "AbacusIntenseCountingChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy' target='_blank'>[Child Raw Code]</a>",
   "AbacusIntenseCountingDriverRawCode": "<a href='https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy' target='_blank'>[Child Raw Code]</a>",
@@ -8,8 +9,20 @@
   
   "AbacusTimeTravelerParentVersion": "v1.0.3",
   "AbacusTimeTravelerChildVersion": "v1.0.3",
+  "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
   "AbacusTimeTravelerChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy' target='_blank'>[Child Raw Code]</a>",
   "AbacusTimeTravelerDriverRawCode": "NA",
   "AbacusTimeTravelerDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>"
+
+  "AppWatcherParentVersion": "v1.0.0",
+  "AppWatcherChildVersion": "v1.0.0",
+  "AppWatcherDriverVersion": "NA",
+  "AppWatcherParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
+  "AppWatcherChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy' target='_blank'>[Child Raw Code]</a>",
+  "AppWatcherDriverRawCode": "NA",
+  "AppWatcherDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>"
+
+
+
 }
