--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -13,7 +13,7 @@
   "AbacusTimeTravelerParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
   "AbacusTimeTravelerChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy' target='_blank'>[Child Raw Code]</a>",
   "AbacusTimeTravelerDriverRawCode": "NA",
-  "AbacusTimeTravelerDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>"
+  "AbacusTimeTravelerDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>",
 
   "AppWatcherParentVersion": "v1.0.0",
   "AppWatcherChildVersion": "v1.0.0",
@@ -21,7 +21,7 @@
   "AppWatcherParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
   "AppWatcherChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy' target='_blank'>[Child Raw Code]</a>",
   "AppWatcherDriverRawCode": "NA",
-  "AppWatcherDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>"
+  "AppWatcherDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>",
 
 
 
