--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,4 +1,6 @@
 {
+  "GitHubAuthor": "BPTWorld"
+  
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
   "AbacusIntenseCountingDriverVersion": "V1.0.0",
