--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,5 +1,5 @@
 {
-  "GitHubAuthor": "BPTWorld"
+  "GitHubAuthor": "BPTWorld",
   
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
