--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -25,6 +25,11 @@
   "AppWatcherDriverRawCode": "NA",
   "AppWatcherDiscussion": "NA - Working on it",
 
-
-
+  "ExampleParentVersion": "v0.0.0",
+  "ExampleChildVersion": "NA",
+  "ExampleDriverVersion": "NA",
+  "ExampleParentRawCode": "NA",
+  "ExampleChildRawCode": "NA",
+  "ExampleDriverRawCode": "NA",
+  "ExampleDiscussion": "NA",
 }
