--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -17,13 +17,13 @@
   "AbacusTimeTravelerDriverRawCode": "NA",
   "AbacusTimeTravelerDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>",
 
-  "AppWatcherParentVersion": "v1.0.0",
-  "AppWatcherChildVersion": "v1.0.2",
-  "AppWatcherDriverVersion": "NA",
-  "AppWatcherParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
-  "AppWatcherChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
-  "AppWatcherDriverRawCode": "NA",
-  "AppWatcherDiscussion": "NA",
+  "AppWatchdogParentVersion": "v1.0.0",
+  "AppWatchdogChildVersion": "v1.0.2",
+  "AppWatchdogDriverVersion": "NA",
+  "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
+  "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
+  "AppWatchdogDriverRawCode": "NA",
+  "AppWatchdogDiscussion": "NA",
 
   "ExampleParentVersion": "v0.0.0",
   "ExampleChildVersion": "NA",
