--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -4,18 +4,18 @@
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
   "AbacusIntenseCountingDriverVersion": "V1.0.0",
-  "AbacusIntenseCountingParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
-  "AbacusIntenseCountingChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy' target='_blank'>[Child Raw Code]</a></a>",
-  "AbacusIntenseCountingDriverRawCode": "<a href='https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy' target='_blank'>[Child Raw Code]</a>",
-  "AbacusIntenseCountingDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-intense-counting/7883' target='_blank'>[Discussion]</a></span>",
+  "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
+  "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
+  "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
   
   "AbacusTimeTravelerParentVersion": "v1.0.3",
   "AbacusTimeTravelerChildVersion": "v1.0.3",
   "AbacusTimeTravelerDriverVersion": "NA",
-  "AbacusTimeTravelerParentRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy' target='_blank'>[Parent Raw Code]</a>",
-  "AbacusTimeTravelerChildRawCode": "<a href='https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy' target='_blank'>[Child Raw Code]</a>",
+  "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
+  "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
   "AbacusTimeTravelerDriverRawCode": "NA",
-  "AbacusTimeTravelerDiscussion": "<a href='https://community.hubitat.com/t/release-abacus-time-traveler/8091' target='_blank'>[Discussion]</a></span>",
+  "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
 
   "AppWatchdogParentVersion": "v1.0.0",
   "AppWatchdogChildVersion": "v1.0.2",
