--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -3,6 +3,13 @@
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
   "App03": "App Watchdog",
+  "App04": "",
+  "App05": "",
+  "App06": "",
+  "App07": "",
+  "App08": "",
+  "App09": "",
+  "App10": "",
   
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
