--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -10,6 +10,16 @@
   "App08": "",
   "App09": "",
   "App10": "",
+  "App11": "",
+  "App12": "",
+  "App13": "",
+  "App14": "",
+  "App15": "",
+  "App16": "",
+  "App17": "",
+  "App18": "",
+  "App19": "",
+  "App20": "",
   
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
