--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -3,10 +3,10 @@
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
   "App03": "App Watchdog",
-  "App04": "",
-  "App05": "",
-  "App06": "",
-  "App07": "",
+  "App04": "At Home Simulator",
+  "App05": "BI Control",
+  "App06": "Device Sequencer",
+  "App07": "Device Watchdog",
   "App08": "",
   "App09": "",
   "App10": "",
@@ -20,6 +20,14 @@
   "App18": "",
   "App19": "",
   "App20": "",
+  
+  "ExampleParentVersion": "Do not remove this section.",
+  "ExampleChildVersion": "Use it to copy and paste in another app.",
+  "ExampleDriverVersion": "Replace Example with your App name - NO spaces",
+  "ExampleParentRawCode": "NA",
+  "ExampleChildRawCode": "NA",
+  "ExampleDriverRawCode": "NA",
+  "ExampleDiscussion": "NA",
   
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
@@ -45,11 +53,39 @@
   "AppWatchdogDriverRawCode": "NA",
   "AppWatchdogDiscussion": "NA",
 
-  "ExampleParentVersion": "Do not remove this section.",
-  "ExampleChildVersion": "Use it to copy and paste in another app.",
-  "ExampleDriverVersion": "Replace Example with your App name - NO spaces",
-  "ExampleParentRawCode": "NA",
-  "ExampleChildRawCode": "NA",
-  "ExampleDriverRawCode": "NA",
-  "ExampleDiscussion": "NA",
+  "AtHomeSimulatorParentVersion": "v1.0.0",
+  "AtHomeSimulatorChildVersion": "v1.0.1",
+  "AtHomeSimulatorDriverVersion": "NA",
+  "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
+  "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
+  "AtHomeSimulatorDriverRawCode": "NA",
+  "AtHomeSimulatorDiscussion": "https://community.hubitat.com/t/beta-at-home-simulator/8697",
+  
+  "BIControlParentVersion": "v1.0.5",
+  "BIControlChildVersion": "v1.0.5",
+  "BIControlDriverVersion": "NA",
+  "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
+  "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "BIControlDriverRawCode": "NA",
+  "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  
+  "DeviceSequencerParentVersion": "v1.0.2",
+  "DeviceSequencerChildVersion": "v1.0.2",
+  "DeviceSequencerDriverVersion": "NA",
+  "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
+  "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
+  "DeviceSequencerDriverRawCode": "NA",
+  "DeviceSequencerDiscussion": "https://community.hubitat.com/t/release-device-sequencer/8596",
+  
+  "DeviceWatchdogParentVersion": "v1.0.9",
+  "DeviceWatchdogChildVersion": "v1.1.3",
+  "DeviceWatchdogDriverVersion": "NA",
+  "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
+  "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
+  "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
+  "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
+  
+  
+  
+  
 }
