--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -9,11 +9,11 @@
   "App07": "Device Watchdog",
   "App08": "Lighting Effects",
   "App09": "Motion Controlled Scene Lighting",
-  "App10": "",
-  "App11": "",
-  "App12": "",
-  "App13": "",
-  "App14": "",
+  "App10": "One at a Time",
+  "App11": "Send IP2IR",
+  "App12": "Web Pinger",
+  "App13": "Welcome Home",
+  "App14": "What Did I Say",
   "App15": "",
   "App16": "",
   "App17": "",
@@ -100,4 +100,45 @@
   "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
   "MotionControlledSceneLightingDriverRawCode": "NA",
   "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
+  
+  "OneataTimeParentVersion": "v1.1.2",
+  "OneataTimeChildVersion": "v1.1.2",
+  "OneataTimeDriverVersion": "NA",
+  "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
+  "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
+  "OneataTimeDriverRawCode": "NA",
+  "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
+  
+  "SendIP2IRParentVersion": "v1.1.7",
+  "SendIP2IRChildVersion": "v1.1.7",
+  "SendIP2IRDriverVersion": "NA",
+  "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
+  "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
+  "SendIP2IRDriverRawCode": "NA",
+  "SendIP2IReDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
+  
+  "WebPingerParentVersion": "v1.0.2",
+  "WebPingerChildVersion": "v1.0.2",
+  "WebPingerDriverVersion": "NA",
+  "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
+  "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
+  "WebPingerDriverRawCode": "NA",
+  "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
+  
+  "WelcomeHomeParentVersion": "v1.1.1"",
+  "WelcomeHomeChildVersion": "v1.1.3"",
+  "WelcomeHomeDriverVersion": "NA",
+  "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
+  "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
+  "WelcomeHomeDriverRawCode": "NA",
+  "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
+  
+  "WhatDidISayParentVersion": "NA",
+  "WhatDidISayChildVersion": "NA",
+  "WhatDidISayDriverVersion": "v1.0.0",
+  "WhatDidISayParentRawCode": "NA",
+  "WhatDidISayChildRawCode": "NA",
+  "WhatDidISayDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Drivers/What%20Did%20I%20Say/WDIS-driver.groovy",
+  "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
+  
 }
