--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -126,7 +126,7 @@
   "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
   
   "WelcomeHomeParentVersion": "v1.1.1",
-  "WelcomeHomeChildVersion": "v1.1.3"",
+  "WelcomeHomeChildVersion": "v1.1.3",
   "WelcomeHomeDriverVersion": "NA",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
