--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -47,7 +47,7 @@
 
   "AppWatchdogParentVersion": "v1.0.0",
   "AppWatchdogChildVersion": "v1.0.3",
-  "AppWatchdogDriverVersion": "NA",
+  "AppWatchdogDriverVersion": "v1.0.0",
   "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
   "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
   "AppWatchdogDriverRawCode": "NA",
