--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -50,7 +50,7 @@
   "AppWatchdogDriverVersion": "v1.0.0",
   "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
   "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
-  "AppWatchdogDriverRawCode": "NA",
+  "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
   "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
 
   "AtHomeSimulatorParentVersion": "v1.0.0",
