--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -21,6 +21,7 @@
   "App19": "",
   "App20": "",
   
+  "ExampleType": "App",
   "ExampleParentVersion": "Do not remove this section.",
   "ExampleChildVersion": "Use it to copy and paste in another app.",
   "ExampleDriverVersion": "Replace Example with your App name - NO spaces",
@@ -29,6 +30,22 @@
   "ExampleDriverRawCode": "NA",
   "ExampleDiscussion": "NA",
   
+  "Example2Type": "Driver",
+  "Example2Driver1Version": "NA",
+  "Example2Driver2Version": "NA",
+  "Example2Driver3Version": "NA",
+  "Example2Driver4Version": "NA",
+  "Example2Driver5Version": "NA",
+  "Example2Driver6Version": "NA",
+  "Example2Driver1RawCode": "NA",
+  "Example2Driver2RawCode": "NA",
+  "Example2Driver3RawCode": "NA",
+  "Example2Driver4RawCode": "NA",
+  "Example2Driver5RawCode": "NA",
+  "Example2Driver6RawCode": "NA",
+  "Example2Discussion": "NA",
+  
+  "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v1.0.6",
   "AbacusIntenseCountingChildVersion": "v1.0.7",
   "AbacusIntenseCountingDriverVersion": "V1.0.0",
@@ -37,6 +54,7 @@
   "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
   "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
   
+  "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v1.0.3",
   "AbacusTimeTravelerChildVersion": "v1.0.3",
   "AbacusTimeTravelerDriverVersion": "NA",
@@ -45,6 +63,7 @@
   "AbacusTimeTravelerDriverRawCode": "NA",
   "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
 
+  "AppWatchdogType": "App",
   "AppWatchdogParentVersion": "v1.0.0",
   "AppWatchdogChildVersion": "v1.0.4",
   "AppWatchdogDriverVersion": "v1.0.0",
@@ -53,6 +72,7 @@
   "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
   "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
 
+  "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v1.0.0",
   "AtHomeSimulatorChildVersion": "v1.0.1",
   "AtHomeSimulatorDriverVersion": "NA",
@@ -61,6 +81,7 @@
   "AtHomeSimulatorDriverRawCode": "NA",
   "AtHomeSimulatorDiscussion": "https://community.hubitat.com/t/beta-at-home-simulator/8697",
   
+  "BIControlType": "App",
   "BIControlParentVersion": "v1.0.5",
   "BIControlChildVersion": "v1.0.5",
   "BIControlDriverVersion": "NA",
@@ -69,6 +90,7 @@
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
   
+  "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v1.0.2",
   "DeviceSequencerChildVersion": "v1.0.2",
   "DeviceSequencerDriverVersion": "NA",
@@ -77,6 +99,7 @@
   "DeviceSequencerDriverRawCode": "NA",
   "DeviceSequencerDiscussion": "https://community.hubitat.com/t/release-device-sequencer/8596",
   
+  "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v1.0.9",
   "DeviceWatchdogChildVersion": "v1.1.3",
   "DeviceWatchdogDriverVersion": "NA",
@@ -85,6 +108,7 @@
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
   
+  "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
   "LightingEffectsChildVersion": "v1.2.0",
   "LightingEffectsDriverVersion": "NA",
@@ -93,6 +117,7 @@
   "LightingEffectsDriverRawCode": "NA",
   "LightingEffectsDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
   
+  "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v1.0.3",
   "MotionControlledSceneLightingChildVersion": "v1.0.3",
   "MotionControlledSceneLightingDriverVersion": "NA",
@@ -101,6 +126,7 @@
   "MotionControlledSceneLightingDriverRawCode": "NA",
   "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
   
+  "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
   "OneataTimeChildVersion": "v1.1.2",
   "OneataTimeDriverVersion": "NA",
@@ -109,6 +135,7 @@
   "OneataTimeDriverRawCode": "NA",
   "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
   
+  "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v1.1.7",
   "SendIP2IRChildVersion": "v1.1.7",
   "SendIP2IRDriverVersion": "NA",
@@ -117,6 +144,7 @@
   "SendIP2IRDriverRawCode": "NA",
   "SendIP2IReDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
   
+  "WebPingerType": "App",
   "WebPingerParentVersion": "v1.0.2",
   "WebPingerChildVersion": "v1.0.2",
   "WebPingerDriverVersion": "NA",
@@ -125,6 +153,7 @@
   "WebPingerDriverRawCode": "NA",
   "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
   
+  "WelcomeHomeType": "App",
   "WelcomeHomeParentVersion": "v1.1.1",
   "WelcomeHomeChildVersion": "v1.1.3",
   "WelcomeHomeDriverVersion": "NA",
@@ -133,6 +162,7 @@
   "WelcomeHomeDriverRawCode": "NA",
   "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
   
+  "WhatDidISayType": "Driver",
   "WhatDidISayParentVersion": "NA",
   "WhatDidISayChildVersion": "NA",
   "WhatDidISayDriverVersion": "v1.0.1",
@@ -141,4 +171,19 @@
   "WhatDidISayDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Drivers/What%20Did%20I%20Say/WDIS-driver.groovy",
   "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
    
+  "WhatDidISayType": "Driver",
+  "Example2Driver1Version": "v1.0.1",
+  "Example2Driver2Version": "NA",
+  "Example2Driver3Version": "NA",
+  "Example2Driver4Version": "NA",
+  "Example2Driver5Version": "NA",
+  "Example2Driver6Version": "NA",
+  "Example2Driver1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Drivers/What%20Did%20I%20Say/WDIS-driver.groovy",
+  "Example2Driver2RawCode": "NA",
+  "Example2Driver3RawCode": "NA",
+  "Example2Driver4RawCode": "NA",
+  "Example2Driver5RawCode": "NA",
+  "Example2Driver6RawCode": "NA",
+  "Example2Discussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
+  
 }
