--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -175,6 +175,12 @@
   "WhatDidISayDriver4RawCode": "NA",
   "WhatDidISayDriver5RawCode": "NA",
   "WhatDidISayDriver6RawCode": "NA",
+  "WhatDidISayDriver1Name": "What Did I Say",
+  "WhatDidISayDriver2Name": "NA",
+  "WhatDidISayDriver3Name": "NA",
+  "WhatDidISayDriver4Name": "NA",
+  "WhatDidISayDriver5Name": "NA",
+  "WhatDidISayDriver6Name": "NA",
   "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
   
 }
