--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,5 +1,6 @@
 {
   "GitHubAuthor": "BPTWorld",
+  "GitHubURL": "https://github.com/bptworld/Hubitat"
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
   "App03": "App Watchdog",
