--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -116,13 +116,13 @@
   
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v1.0.9",
-  "DeviceWatchdogChildVersion": "v1.1.7",
+  "DeviceWatchdogChildVersion": "v1.1.8",
   "DeviceWatchdogDriverVersion": "NA",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
-  "DeviceWatchdogUpdateNote": "V1.1.7 - 02/13/19 - Added more error checking.",
+  "DeviceWatchdogUpdateNote": "V1.1.8 - 02/16/19 - Trying to track down an error.",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
