--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -10,13 +10,13 @@
   "App07": "Device Watchdog",
   "App08": "Lighting Effects",
   "App09": "Motion Controlled Scene Lighting",
-  "App10": "One at a Time",
-  "App11": "Send IP2IR",
-  "App12": "Web Pinger",
-  "App13": "Welcome Home",
-  "App14": "What Did I Say",
-  "App15": "",
-  "App16": "",
+  "App10": "Notifier",
+  "App11": "One at a Time",
+  "App12": "Send IP2IR",
+  "App13": "Web Pinger",
+  "App14": "Welcome Home",
+  "App15": "What Did I Say",
+  "App16": "Notifier",
   "App17": "",
   "App18": "",
   "App19": "",
@@ -205,5 +205,15 @@
   "WhatDidISayDriver6Name": "NA",
   "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
   "WhatDidISayUpdateNote": "NA",
+  
+  "NotifierType": "App",
+  "NotifierParentVersion": "v1.0.0",
+  "NotifierChildVersion": "v1.0.0",
+  "NotifierDriverVersion": "NA",
+  "NotifierParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-parent.groovy",
+  "NotifierChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-child.groovy",
+  "NotifierDriverRawCode": "NA",
+  "NotifierDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
+  "NotifierUpdateNote": "V1.0.0 - 02/22/19 - Initial release",
   
 }
