--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -16,7 +16,7 @@
   "App13": "Web Pinger",
   "App14": "Welcome Home",
   "App15": "What Did I Say",
-  "App16": "Notifier",
+  "App16": "",
   "App17": "",
   "App18": "",
   "App19": "",
