--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -82,7 +82,7 @@
   "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
   "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
   "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdogUpdateNote": "NA",
+  "AppWatchdogUpdateNote": "V1.0.7 - 02/24/19 - Fixed Pushover reports.",
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v1.0.0",
