--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -208,12 +208,12 @@
   
   "NotifierType": "App",
   "NotifierParentVersion": "v1.0.0",
-  "NotifierChildVersion": "v1.0.0",
+  "NotifierChildVersion": "v1.0.1",
   "NotifierDriverVersion": "NA",
   "NotifierParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-parent.groovy",
   "NotifierChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-child.groovy",
   "NotifierDriverRawCode": "NA",
   "NotifierDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierUpdateNote": "V1.0.0 - 02/22/19 - Initial release",
+  "NotifierUpdateNote": "V1.0.1 - 02/24/19 - Added color to lighting options. Other code cleanup.",
   
 }
