--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -116,13 +116,13 @@
   
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v1.1.0",
-  "DeviceWatchdogChildVersion": "v1.2.0",
+  "DeviceWatchdogChildVersion": "v1.2.1",
   "DeviceWatchdogDriverVersion": "V1.0.1",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
-  "DeviceWatchdogUpdateNote": "V1.2.0 - 02/25/19 - Added a new report type - Device Status",
+  "DeviceWatchdogUpdateNote": "V1.2.1 - 02/25/19 - Second attempt at new Device Status reporting",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
