--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -76,13 +76,13 @@
 
   "AppWatchdogType": "App",
   "AppWatchdogParentVersion": "v1.0.0",
-  "AppWatchdogChildVersion": "v1.0.7",
+  "AppWatchdogChildVersion": "v1.0.8",
   "AppWatchdogDriverVersion": "v1.0.0",
   "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
   "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
   "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
   "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdogUpdateNote": "V1.0.7 - 02/24/19 - Fixed Pushover reports.",
+  "AppWatchdogUpdateNote": "V1.0.8 - 02/26/19 - Some test code had snuck in to the last update breaking the app.",
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v1.0.0",
