--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -10,7 +10,7 @@
   "App07": "Device Watchdog",
   "App08": "Lighting Effects",
   "App09": "Motion Controlled Scene Lighting",
-  "App10": "Notifier",
+  "App10": "Notifier Plus",
   "App11": "One at a Time",
   "App12": "Send IP2IR",
   "App13": "Web Pinger",
@@ -144,15 +144,15 @@
   "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
   "MotionControlledSceneLightingUpdateNote": "NA",
   
-  "NotifierType": "App",
-  "NotifierParentVersion": "v1.0.0",
-  "NotifierChildVersion": "v1.0.1",
-  "NotifierDriverVersion": "NA",
-  "NotifierParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-parent.groovy",
-  "NotifierChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier/N-child.groovy",
-  "NotifierDriverRawCode": "NA",
-  "NotifierDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierUpdateNote": "V1.0.1 - 02/24/19 - Added color to lighting options. Other code cleanup.",
+  "NotifierPlusType": "App",
+  "NotifierPlusParentVersion": "v1.0.1",
+  "NotifierPlusChildVersion": "v1.0.2",
+  "NotifierPlusDriverVersion": "NA",
+  "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
+  "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
+  "NotifierPlusDriverRawCode": "NA",
+  "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
+  "NotifierPlusUpdateNote": "V1.0.2 - 02/27/19 - Name change to Notifier PLus. Added in triggers for Contact Sensors and Switches. (more to come!)",
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
