--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -146,13 +146,13 @@
   
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v1.0.1",
-  "NotifierPlusChildVersion": "v1.0.4",
+  "NotifierPlusChildVersion": "v1.0.5",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
   "NotifierPlusDriverRawCode": "NA",
   "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierPlusUpdateNote": "V1.0.4 - 02/28/19 - Second attempt to fix speaking bug.",
+  "NotifierPlusUpdateNote": "V1.0.5 - 02/28/19 - Lots of changes... more to come!",
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
