--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -146,13 +146,13 @@
   
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v1.0.1",
-  "NotifierPlusChildVersion": "v1.0.5",
+  "NotifierPlusChildVersion": "v1.0.6",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
   "NotifierPlusDriverRawCode": "NA",
   "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierPlusUpdateNote": "V1.0.5 - 02/28/19 - Lots of changes... more to come!",
+  "NotifierPlusUpdateNote": "V1.0.6 - 03/01/19 - Fixed 'pause' button. Fixed 'by Day of the Week'. Special Thank you to RCJordan for all the testing! Added Motion Sensor to Triggers.",
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
